[gd_scene load_steps=2 format=2]

[ext_resource path="res://graph/GraphEdit.gd" type="Script" id=2]

[node name="GraphEdit" type="GraphEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="_end_node_move" from="." to="." method="_on_GraphEdit__end_node_move"]
[connection signal="connection_request" from="." to="." method="_on_GraphEdit_connection_request"]
[connection signal="copy_nodes_request" from="." to="." method="_on_GraphEdit_copy_nodes_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_GraphEdit_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="duplicate_nodes_request" from="." to="." method="_on_GraphEdit_duplicate_nodes_request"]
[connection signal="node_selected" from="." to="." method="_on_GraphEdit_node_selected"]
[connection signal="paste_nodes_request" from="." to="." method="_on_GraphEdit_paste_nodes_request"]
